# study-python-stock

./: .gitignore  01-get-stock-data-and-plotting.ipynb  02-candlestick-chart.ipynb  03-ploting-macd-chart.ipynb  03-plotting-macd-chart.ipynb  04-stochastic.ipynb  README.md  dart.ipynb  quant.ipynb
AssetAllocation/: App.py  Background.md  Backtesting.py  DynamicAA.py  ETF.py  ETFCode.py  ETFUtils.py  FRED.py  Portpolio.py  PortpolioAnalysis.py  Simulation.py  StaticAA.py  scratch.ipynb  voca.md
AssetAllocationV2/: 220716.ipynb  220728.ipynb  240123.ipynb  ETF.py  README.md  dynamicAA.ipynb  scartch-fred.ipynb  scratch.ipynb  staticAA.ipynb
AssetAllocationV3/: .gitignore  CMakeLists.txt  assetv3
AssetAllocationV3/include/LibCommon/: mytypes.h
AssetAllocationV3/python/: my_module.py  y_finance.py
AssetAllocationV3/src/: main.cpp
AssetAllocationV3/src/App/: AppTop.cpp
AssetAllocationV3/src/LibBackend/: Backend.cpp  Backend.h  DynamicAA.cpp  DynamicAA.h  Portfolio.cpp  Portfolio.h
AssetAllocationV3/src/LibCommon/: DateUtils.cpp  DateUtils.h  LibCommonTypes.h  mytypes.h
AssetAllocationV3/src/LibFrontend/: Frontend.cpp  Frontend.h
SnP500_Analysis/: main.py
all-weather/: AW.yaml  Background.md  DANTE.yaml  DBC.yaml  ETF.py  ETFCode.py  ETFUtils.py  GTAA-NON.yaml  GTAA.yaml  MyPortpolio.yaml  Portpolio.py  Simulation.py  Strategy.py  gvaa.py  gvaa.yaml  voca.md
backtesting/: main.py
chatbot/: discord_bot.py  finance_info.py  financeinfo.ipynb
notion/: scratch.ipynb
quant-temp/: Backtesting.py  FnGuide.py  GetGroup.py  Manager.py  QuantIndex.py  (+2 more)
(+129 files in other folders)
